refactor: general cleanup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,14 +11,12 @@
       "~/*": ["src/*"]
     },
     "resolveJsonModule": true,
-    "types": [
-      "vite/client"
-    ],
+    "types": ["vite/client", "chrome", "unplugin-icons/types/vue"],
     "strict": true,
     "noUnusedLocals": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
   },
-  "exclude": ["dist", "node_modules"]
+  "exclude": ["./extension/*", "node_modules", "eslint.config.mjs"]
 }
