--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
   },
-  "exclude": ["./extension/*", "node_modules", "eslint.config.mjs"]
+  "exclude": ["./dist/*", "node_modules", "eslint.config.mjs"]
 }
